# attention-gym

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  mkdocs.yml  modal_tests.py  pyproject.toml
.github/workflows/: docs.yml  modal-tests.yml  prek.yml  test.yml
attn_gym/: __init__.py  utils.py
attn_gym/linear/: __init__.py  gdn.py
attn_gym/masks/: __init__.py  batchify.py  block_diffusion.py  causal.py  document_mask.py  global_sliding_window.py  jetspec.py  shared_prefix.py  svg.py  vsa.py
attn_gym/mods/: __init__.py  activation.py  exclusive_sa.py  graphormer.py  latent_attention.py  sandwich.py
attn_gym/paged_attention/: latency.py  paged_attention.py  throughput.py
attn_gym/sparse/: __init__.py
benchmarks/: bench_block_mask.py  flex_perf.py
benchmarks/configs/: config_basic.yaml  flash_b200.yaml  flash_config_basic.yaml  flash_h200.yaml  triton.yaml
benchmarks/sparse/: benchmark_compressed_sparse_attention_cute.py  benchmark_compressed_sparse_attention_cute_forward_backward.py  benchmark_compressed_sparse_attention_cute_tflops.py  (+2 more)
docs/: concepts.md  determinism.md  examples.md  getting-started.md  index.md  linear.md  masks.md  mods.md  utilities.md
docs/stylesheets/: extra.css
examples/: aoti_create_block_mask.py  aoti_flex_attention.py  batch_invariance.py  benchmark.py  fastwan_vsa.py  flex_attn.ipynb  flex_autotune_replay.py  flex_determinism.py  flex_flash_attention.py  flex_grid_sweep.py  ring_attention.py  rows_guaranteed_safe_demo.py  shared_prefix_split_attention.py  standalone_backwards_call.py  vsa.py  xsa_attention.py
test/: test_block_diffusion.py  test_causal_block_mask.py  test_compressed_sparse_attention_api.py  test_compressed_sparse_attention_benchmark.py  test_compressed_sparse_attention_compile.py  test_compressed_sparse_attention_cute.py  test_compressed_sparse_attention_reference.py  test_compressed_sparse_attention_triton.py  test_document_mask.py  test_exclusive_sa.py  test_global_sliding_window.py  test_graphormer.py  test_jetspec.py  test_linear.py  test_merge_attention.py  test_mods.py  test_namespaces.py  test_natten.py  test_sandwich.py  test_shared_prefix.py  test_shared_prefix_split_attention.py  test_vsa.py
(+28 files in other folders)
