# pyproject.toml

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "attn_gym"
authors = [{ name = "Driss Guessous", email = "drisspguessous@gmail.com" }]
description = "Helpful tools and examples for working with flex-attention"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "jsonargparse",
    "docstring-parser",
    "numpy",
    "flash-attn-4[cu13]~=4.0.0b23; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

dev = [
    "prek",
    "pytest",
    "ruff",
    "jsonargparse",
    "docstring-parser",
    "numpy",
]

viz = [
    "matplotlib",
    "numpy",
    "jsonargparse",
    "docstring-parser",
    "tabulate",
    "pyyaml",
    "marimo",
]

docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "numpy",
]

cute = [
    "cuda-python==13.3.1",
    "nvidia-cutlass-dsl==4.5.2",
    "flash-attn-4==4.0.0b17",
    "quack-kernels==0.5.0",
    "nvidia-cudnn-frontend==1.25.0",
]

# ---------- TOOL CONFIGURATIONS ------------
[tool.hatch.version]
source = "vcs"

# ---------- RUFF ------------
[tool.ruff]
target-version = "py310"
line-length = 99
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb",
]

[tool.ruff.lint]
ignore = ['E231', 'E731']

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
